# luminosity_drone

./: .gitignore  .gitmodules  README.md
alien_finder/: CMakeLists.txt  package.xml
alien_finder/launch/: task_5b_submission.launch.py  task_5c_submission.launch.py  task_6_bonus_submission.launch.py  task_6_submission.launch.py
loc_msg/: CMakeLists.txt  package.xml
loc_msg/msg/: Biolocation.msg
luminosity_drone/: CMakeLists.txt  package.xml  setup.cfg  setup.py
luminosity_drone/config/: camera_info.yaml  params.yaml
luminosity_drone/launch/: bridge.yaml  demo_launch.py  task_1_submission.launch  task_2a.launch  task_2a_submission.launch  task_2b.launch  task_2b_submission.launch  task_2c.launch  task_2c_submission.launch  task_4a.launch  task_4a.launch.py  task_4a_submission.launch .py  task_5a_submission.launch.py  usb_cam.launch  whycon.launch
luminosity_drone/luminosity_drone/: controller.py
luminosity_drone/msg/: Info.msg
luminosity_drone/scripts/: arena_mapper.py  led_detection.py  position_hold.py
