<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>luminosity_drone</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stormbreaker.004@gmail.com">arunp</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <exec_depend>swift_msgs</exec_depend>
  <depend>geometry_msgs</depend>
  <exec_depend>pid_msg</exec_depend>
  <depend>std_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
